css: add normalize

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,8 +1,1 @@
-@mixin text-color($color: salmon) {
-  color: $color;
-}
-
-h1 {
-  @include text-color;
-  font-size: 2.5em;
-}
+@import "normalize";
